--- a/src/components/topComponent/TopComponent.module.css
+++ b/src/components/topComponent/TopComponent.module.css
@@ -102,11 +102,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
     height: 100%;
     width: 100%;
     background-color: #efefef;
     gap: 5vw;
+  }
+  .container{
+    padding: 0px;
   }
 }
 
