--- a/src/components/doorComponent/DoorComponent.module.css
+++ b/src/components/doorComponent/DoorComponent.module.css
@@ -82,7 +82,11 @@
 @media only screen and (min-width: 480px) {
 }
 /* Small devices such as large phones (640px and up) */
-@media only screen and (min-width: 640px) {
+@media only screen and (max-width: 640px) {
+  .container{
+    width:100%;
+    left:0;
+  }
 }
 
 /* Medium devices such as tablets (768px and up) */
