--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -26,7 +26,7 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  font-size: 2vw;
+  font-size: 20px;
 }
 .trHeader {
   color: #ffd700;
@@ -35,7 +35,7 @@
   font-style: normal;
   font-weight: 600;
   line-height: normal;
-  font-size: 2vw;
+  font-size: 20px;
   text-align: left;
   margin-bottom: 2vw;
 }
@@ -54,11 +54,13 @@
 }
 .content {
   color: #ffd700;
+  text-align: center;
   font-family: "Montserrat", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  font-size: 1.6vw;
+  font-size: 14px;
+  width: 80%;
 }
 .bot {
   display: flex;
@@ -75,8 +77,9 @@
 }
 .botContent {
   color: #ffd700;
+  text-align: center;
   font-family: "Montserrat", sans-serif;
-  font-size: 2vw;
+  font-size: 17px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -85,7 +88,31 @@
 @media only screen and (min-width: 375px) {
 }
 
-@media only screen and (min-width: 480px) {
+@media only screen and (max-width: 640px) {
+  .top {
+    flex-direction: column;
+    gap: 35px;
+  }
+  .topLeft {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 4vw;
+    width: 100%;
+  }
+  .topRight {
+    width: 100%;
+  }
+  .contentWrapper {
+    display: flex;
+    justify-content: center;
+    font-size: 14px;
+    width: 100%;
+  }
+  .trHeader {
+    text-align: center;
+    font-size: 20px;
+  }
 }
 /* Small devices such as large phones (640px and up) */
 @media only screen and (min-width: 640px) {
