--- a/src/components/homePage/secTwoCard/SecTwoCard.module.css
+++ b/src/components/homePage/secTwoCard/SecTwoCard.module.css
@@ -5,7 +5,7 @@
 .header {
   color: #c45f5f;
   font-family: "Montserrat", sans-serif;
-  font-size: 2.5vw;
+  font-size: 1.3rem;
   font-weight: 600;
   margin-top: 2vw;
   margin-bottom: 1.5vw;
@@ -14,7 +14,7 @@
 .para {
   color: #c45f5f;
   font-family: "Poppins", sans-serif;
-  font-size: 1.7vw;
+  font-size: 24px;
   font-weight: 400;
 }
 
@@ -25,7 +25,7 @@
   .header {
     color: #a32727;
     font-family: "Montserrat", sans-serif;
-    font-size: 0.9rem;
+    font-size: 18px;
     text-align: center;
     font-weight: 700;
     margin-top: 2vw;
@@ -35,7 +35,7 @@
   .para {
     color: #c45f5f;
     font-family: "Poppins", sans-serif;
-    font-size: 0.4rem;
+    font-size: 14px;
     text-align: center;
     font-weight: 600;
   }
@@ -43,13 +43,13 @@
 /* Small devices such as large phones (640px and up) */
 @media only screen and (min-width: 640px) {
   .header {
-    font-size: 2.2vw;
+    font-size: 20px;
     margin-top: 2vw;
     margin-bottom: 1.5vw;
   }
 
   .para {
-    font-size: 1.6vw;
+    font-size: 14px;
   }
 }
 
@@ -60,13 +60,13 @@
 /*(900px and up) */
 @media only screen and (min-width: 900px) {
   .header {
-    font-size: 1.8vw;
+    font-size: 20px;
     margin-top: 2vw;
     margin-bottom: 1vw;
   }
 
   .para {
-    font-size: 1.2vw;
+    font-size: 14px;
   }
 }
 
@@ -77,13 +77,13 @@
 /* Largest devices such as desktops (1280px and up) */
 @media only screen and (min-width: 1280px) {
   .header {
-    font-size: 1.6vw;
+    font-size: 22px;
     margin-top: 2vw;
     margin-bottom: 1vw;
   }
 
   .para {
-    font-size: 0.9vw;
+    font-size: 14px;
   }
 }
 
