--- a/src/components/homePage/sectionTwo/SectionTwo.module.css
+++ b/src/components/homePage/sectionTwo/SectionTwo.module.css
@@ -8,7 +8,7 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  font-size: 4.2vw;
+  font-size: 3rem;
   margin-bottom: 5vw;
 }
 
@@ -22,6 +22,7 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
+  gap: 38px;
 }
 .card {
   width: 45%;
@@ -31,7 +32,7 @@
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   text-align: center;
-  font-size: 2.3vw;
+  font-size: 1.4rem;
   width: 100%;
   display: flex;
   align-items: center;
@@ -43,7 +44,7 @@
 
 @media only screen and (min-width: 480px) {
   .viewLink {
-    font-size: 2vw;
+    font-size: 1.3rem;
     margin-top: 3vw;
   }
 }
@@ -53,7 +54,7 @@
     padding: 5vw 5vw;
   }
   .header {
-    font-size: 4vw;
+    font-size: 3rem;
     margin-bottom: 5vw;
   }
 }
@@ -88,7 +89,7 @@
     gap: 5vw;
   }
   .viewLink {
-    font-size: 1.2vw;
+    font-size: 20px;
     margin-top: 3vw;
   }
 }
