--- a/src/components/HamButton.module.css
+++ b/src/components/HamButton.module.css
@@ -49,12 +49,14 @@
   .hambutton {
     position: absolute;
     top: 0;
-    right: 5px;
     z-index: 110;
+    width: auto;
+    border: 0px;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: transparent;
   }
   
   /* Lines */
@@ -85,7 +87,6 @@
   /* Responsive tweaks */
   @media (min-width: 640px) {
     .hambutton {
-      height: 8.5vw;
       width: 8.5vw;
     }
     .hambuttonLine {
@@ -93,3 +94,164 @@
     }
   }
   
+
+  
+  .wrapper {
+    height: 100%;
+    width: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding: 2vw 1vw;
+    display: grid; /* Changed from flex to grid */
+    grid-template-columns: repeat(2, 1fr); /* Two equal columns */
+    justify-items: center; /* Centers items horizontally */
+    align-items: center; /* Centers items vertically */
+    gap: 3vw;
+  }
+
+.wrapper>div{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.wrapper>div>a{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.floorCardwrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+.imageContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+.imageContainer>svg{
+  scale:1.4
+}
+.contentContainer {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: -5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.content,
+.accessories {
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  width: fit-content;
+  line-height: normal;
+  font-size: 12px;
+  padding: 10%;
+  text-align: center;
+}
+
+@media only screen and (min-width: 375px) {
+}
+
+@media only screen and (min-width: 480px) {
+  .wrapper {
+    padding: 2vw 1vw;
+    gap: 3vw;
+  }
+  .content {
+    font-size: 12px;
+  }
+}
+/* Small devices such as large phones (640px and up) */
+@media only screen and (min-width: 640px) {
+}
+
+/* Medium devices such as tablets (768px and up) */
+@media only screen and (min-width: 768px) {
+  .wrapper {
+    padding: 2vw 1vw;
+    gap: 3vw;
+  }
+
+  .imageContainer {
+    width: calc(var(--side-bars-layout-width) - 1vw);
+  }
+  .contentContainer {
+    top: 0;
+    left: 0;
+  }
+  .content {
+    font-size: 12px;
+  }
+}
+
+/*(900px and up) */
+@media only screen and (min-width: 900px) {
+}
+
+/* Large devices such as laptops (1024px and up) */
+@media only screen and (min-width: 1024px) {
+  .wrapper {
+    padding: 2vw 1vw;
+    gap: 1.2vw;
+  }
+
+  .imageContainer {
+    width: calc(var(--side-bars-layout-width) - 2vw);
+  }
+  .contentContainer {
+    top: 0;
+    left: 0;
+  }
+  .content {
+    font-size: 12px;
+  }
+  .accessories {
+    padding-top: 0.1vw;
+    font-size: 0.7vw;
+  }
+}
+
+/* Largest devices such as desktops (1280px and up) */
+@media only screen and (min-width: 1280px) {
+  .wrapper {
+    padding: 2vw 1vw;
+    gap: 1.2vw;
+    padding-top: 0.3vw;
+  }
+
+  .imageContainer {
+    width: calc(var(--side-bars-layout-width) - 2vw);
+  }
+  .contentContainer {
+    top: 0;
+    left: 0;
+  }
+  .content {
+    font-size: 12px;
+  }
+  .accessories {
+    padding-top: 0.2vw;
+    font-size: 0.65vw;
+  }
+}
+
+/*  (1350px and up) */
+@media only screen and (min-width: 1440px) {
+}
