--- a/src/components/homePage/copsAndLops/CopsAndLops.module.css
+++ b/src/components/homePage/copsAndLops/CopsAndLops.module.css
@@ -74,6 +74,33 @@
   }
 }
 /* Small devices such as large phones (640px and up) */
+@media only screen and (max-width: 640px) {
+  .cardsContainer {
+    flex-direction: column;
+    gap:38px;
+    min-height: fit-content;
+  }
+  .card{
+    width: 100%;
+    min-height: fit-content;
+    padding: 10px;
+    padding-left: 15vw;
+  }
+  .cardHeader{
+    text-align: center;
+    font-size: 20px;
+  }
+  .item{
+    font-size: 16px;
+  }
+  .cardImage {
+    position: absolute;
+    width: 10vw;
+    left: 2vw;
+    top: -10%;
+  }
+}
+/* Small devices such as large phones (640px and up) */
 @media only screen and (min-width: 640px) {
   .header {
     font-size: 4vw;
