--- a/src/components/topComponent/TopComponent.module.css
+++ b/src/components/topComponent/TopComponent.module.css
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  max-height: 25vh;
+  max-height: 17vh;
   height: var(--top-Layout-comp-height);
   padding-left: var(--side-bars-layout-width);
   padding-right: var(--side-bars-layout-width);
@@ -12,7 +12,7 @@
 .wrapper {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
   flex-direction: row;
   height: 100%;
   width: 100%;
@@ -113,6 +113,7 @@
     width: 100%;
     background-color: #efefef;
     gap: 5vw;
+    justify-content: space-evenly;
   }
   .container{
     padding: 0px;
