--- a/src/components/aboutPage/hero/Hero.module.css
+++ b/src/components/aboutPage/hero/Hero.module.css
@@ -24,6 +24,7 @@
   top: 0;
   width: 100%;
   height: 100%;
+  min-height: fit-content;
   background: linear-gradient(270deg, rgba(2, 2, 2, 0) 0%, #030303 60.22%);
   padding: 7vw 4vw;
 }
@@ -47,7 +48,7 @@
   font-weight: 400;
   line-height: normal;
   padding: 0px 5vw;
-  font-size: 2.7vw;
+  font-size: 12px;
   width: 100%;
   margin-bottom: 7vw;
 }
