--- a/src/components/aboutPage/sectionTwo/SectionTwo.module.css
+++ b/src/components/aboutPage/sectionTwo/SectionTwo.module.css
@@ -57,7 +57,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  font-size: 1.5vw;
+  font-size: 12px;
 }
 .cardImage {
   width: 14vw;
